--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
+    "target": "ES2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "target": "ESNext",
-    "moduleResolution": "node",
-    "module": "ESNext",
-    "types": ["vitest/globals"]
-  }
+    "skipLibCheck": true,
+    "outDir": "dist",
+    "types": ["node", "jest"]
+  },
+  "include": ["src"]
 }
